--- a/style.css
+++ b/style.css
@@ -298,3 +298,259 @@ main {
 	line-height: 1.5rem;
 	color: var(--warm-black);
 }
+.main-product-detail {
+	position: relative;
+	width: 100%;
+	min-width: 320px;
+	height: auto;
+	padding: 20px 10px;
+	background-color: var(--warm-black);
+}
+.product-detail--batatalogo {
+	position: absolute;
+	width: 40px;
+	height: 25px;
+	background-image: url("./assets/img/logo.svg");
+	top: -12px;
+	left: calc(50% - 20px);
+}
+.product-detail--title {
+	width: 90%;
+	min-width: 288px;
+	height: auto;
+	margin: 0 auto;
+	margin-top: 50px;
+	text-align: center;
+}
+.product-detail--title h2 {
+	margin-bottom: 20px;
+	font-size: 2.4rem;
+	font-weight: bold;
+	line-height: 2.6rem;
+	color: var(--just-white);
+}
+.product-detail--title p {
+	margin-bottom: 20px;
+	font-size: 1.4rem;
+	font-weight: 500;
+	line-height: 1.8rem;
+	color: #808080;
+}
+.product-detail--card {
+	width: 90%;
+	min-width: 288px;
+	max-width: 400px;
+	min-height: 150px;
+	margin: 15px auto;
+	padding: 15px;
+	background-color: var(--warm-black_1);
+	border-radius: 5px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+.product-detail--card .clock {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-bottom: 10px;
+	background-image: url("./assets/icons/clock.svg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.product-detail--card .eye {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-bottom: 10px;
+	background-image: url("./assets/icons/eye.svg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.product-detail--card .dollar {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-bottom: 10px;
+	background-image: url("./assets/icons/dollar-sign.svg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.product-detail--card .check {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-bottom: 10px;
+	background-image: url("./assets/icons/check-circle.svg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.product--card-title {
+	margin-bottom: 15px;
+	font-size: 1.8rem;
+	font-weight: bold;
+	line-height: 1.8rem;
+	color: var(--just-white);
+}
+.product--card-body {
+	margin-bottom: 15px;
+	font-size: 1.4rem;
+	font-weight: 500;
+	line-height: 1.8rem;
+	color: #808080;
+}
+.bitcoin-img-container {
+	width: 100%;
+	min-width: 320px;
+	height: 50vh;
+	background-image: url("./assets/img/bitcoinbaby2x.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.bitcoin-img-container h2 {
+	padding-top: 60px;
+	font-size: 2.4rem;
+	font-weight: bold;
+	line-height: 2.6rem;
+	color: var(--just-white);
+	text-align: center;
+}
+.main-plans-container {
+	width: 100%;
+	min-width: 320px;
+	padding-bottom: 70px;
+	text-align: center;
+}
+.plans--title {
+	width: 90%;
+	min-width: 288px;
+	height: auto;
+	margin: 0 auto;
+	margin-bottom: 50px;
+}
+.plans--title h2 {
+	padding-top: 50px;
+	font-size: 2.4rem;
+	font-weight: bold;
+	line-height: 2.6rem;
+	color: var(--warm-black);
+}
+.plans--title p {
+	padding-top: 30px;
+	font-size: 1.4rem;
+	font-weight: 500;
+	line-height: 1.8rem;
+	color: #757575;
+}
+.plans-container--slider {
+	display: flex;
+	/* gap: 50px; */
+	height: 316px;
+	overflow-x: scroll;
+	overscroll-behavior-x: contain;
+	/* Hacer que el scroll se mueva a la ubicacion mas proxima */
+	scroll-snap-type: x proximity;
+}
+.plans-container--card {
+	position: relative;
+	scroll-snap-align: center;
+	width: 70%;
+	min-width: 190px;
+	max-width: 300px;
+	height: 250px;
+	margin: 50px 5px 0;
+	padding: 0 15px;
+	background-color: var(--just-white);
+	border-radius: 15px;
+	box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+.plans-container--card .recommended {
+	position: absolute;
+	width: 120px;
+	height: 31px;
+	left: calc(50% - 60px);
+	top: -15px;
+	font-size: 1.2rem;
+	padding: 7px;
+	background-color: var(--bitcoin-orange);
+	border-radius: 8px;
+	color: var(--just-white);
+}
+.plan-card--title {
+	padding-top: 30px;
+	font-size: 1.4rem;
+	font-weight: 500;
+	line-height: 1.8rem;
+	color: var(--warm-black);
+}
+.plan-card--price {
+	padding: 5px 0;
+	font-size: 5.2rem;
+	font-weight: bold;
+	line-height: 6.3rem;
+	color: var(--warm-black);
+}
+.plan-card--price span {
+	position: absolute;
+	font-size: 1.2rem;
+	font-weight: 300;
+	left: calc(50% - 43px);
+	top: calc(50% - 83px);
+}
+.plan-card--saving {
+	color: #757575;
+	font-size: 1.2rem;
+}
+.plan-card--cta {
+	width: 150px;
+	height: 48px;
+	margin-top: 20px;
+	background-color: var(--off-white);
+	border-radius: 5px;
+	border: 2px solid var(--bitcoin-orange);
+	font-size: 1.4rem;
+	font-weight: bold;
+	line-height: 1.8rem;
+	color: var(--warm-black);
+	font-family: "DM Sans", "sans-serif";
+}
+.plan-card--cta span {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background-image: url("./assets/icons/orange-right-arrow.svg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	vertical-align: middle;
+	margin-left: 8px;
+}
+footer {
+	display: flex;
+	width: 100%;
+	height: 150px;
+	background-color: var(--bitcoin-orange);
+}
+footer section {
+	display: flex;
+	width: 50%;
+	align-items: center;
+	justify-content: center;
+}
+footer .left ul {
+	font-size: 1.4rem;
+	font-weight: 500;
+	line-height: 1.8rem;
+	list-style: none;
+}
+.left li {
+	margin: 10px 0;
+}
+
+.left a {
+	text-decoration: none;
+	color: var(--just-white);
+}
